# mygrad

./: .gitignore  CMakeLists.txt  Makefile  README.md  functions.cpp  functions.hpp  grad  grad.cpp  grad.h  helper.cpp  helper.h  helper.hpp  main.cpp  model.cpp  model.hpp  play.cpp  tensor.cpp  tensor.h  tensor.hpp  tensorStruct.hpp  tensorTemplated.hpp  test.cpp
examples/cats/: .gitignore  CMakeLists.txt  README.md  main.cpp  processData.cpp  processData.hpp
examples/cats/src/: cli.hpp  modelRunner.cpp  modelRunner.hpp  processData.cpp  processData.hpp
examples/mnist/: CMakeLists.txt  README.md  main.cpp  model  modelRunner.cpp  processData.cpp  processData.hpp  trainAndTest.cpp  trainAndTest.hpp
examples/mnist/src/: modelRunner.cpp  modelRunner.hpp  processData.cpp  processData.hpp
include/: helper.hpp  layers.hpp  loss.hpp  model.hpp  tensor.hpp  types.hpp
include/mygrad/: conv2d.hpp  helper.hpp  layers.hpp  linearLayer.hpp  loss.hpp  model.hpp  mygrad.hpp  optim.hpp  smallArray.hpp  tensor.hpp  threadPool.hpp
src/: conv2d.cpp  functions.cpp  functions.hpp  helper.cpp  helper.hpp  layers.cpp  layers.hpp  linearLayer.cpp  loss.cpp  loss.hpp  model.cpp  model.hpp  optim.cpp  optim.hpp  tensor.cpp  tensor.hpp  tensorStruct.hpp  threadPool.cpp
